<resources>
    <string name="app_name">NoteToAlperYilmazturk</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="idea_text">Idea</string>
    <string name="important_text">Important</string>
    <string name="todo_text">To do</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">OK</string>
    <string name="button_done">Done</string>
    <string name="settings_title">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="add_new_note">Add a new note</string>
    <string name="your_note">Your note</string>
</resources>