<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_important"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginTop="@dimen/marginTop"
        android:text="@string/important_text"
        app:layout_constraintEnd_toStartOf="@id/textView_todo"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/marnginEnd"
        android:text="@string/todo_text"
        app:layout_constraintEnd_toStartOf="@id/textView_idea"
        app:layout_constraintStart_toEndOf="@id/textView_important"
        app:layout_constraintTop_toTopOf="@+id/textView_important" />

    <TextView
        android:id="@+id/textView_idea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/marginEnd_2"
        android:text="@string/idea_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView_todo"
        app:layout_constraintTop_toTopOf="@id/textView_todo" />


    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart_2"
        android:layout_marginTop="@dimen/marginTop_4"
        android:textSize="@dimen/textSize"
        app:layout_constraintStart_toStartOf="@+id/textView_todo"
        app:layout_constraintTop_toBottomOf="@id/textView_todo" />

    <TextView
        android:id="@+id/textView_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="124dp"
        app:layout_constraintStart_toStartOf="@+id/textView_important"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginBottom_1"
        android:backgroundTint="@color/color_button"
        android:text="@string/button_done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>